Bug 122494 - Cannot change text orientation of x-axis labels
Summary: Cannot change text orientation of x-axis labels
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.3.0 target:6.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-01-04 19:50 UTC by Regina Henschel
Modified: 2019-01-22 18:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Chart with date axis labels, which need label rotation (18.42 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-01-04 19:50 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2019-01-04 19:50:58 UTC
Created attachment 148043 [details]
Chart with date axis labels, which need label rotation

Open attached document. Set the chart into edit mode. Call Format dialog for x-axis, tab 'Label'.
Notice, it is not possible to set text orientation. It uses the angle, which was set by older versions.

I see the error in Version: 6.2.0.0.alpha0+ (x64)
Build ID: 6baca63b44bf7f75a522b1adc4b4bbce502aec3b
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-10-20_01:35:41
Locale: en-US (en_US); Calc: threaded
In addition, in this version the 'Text direction' drop down list is missing. In later versions it is there again.

The last version on my pc, which is OK, is Version: 6.2.0.0.alpha0+ (x64)
Build ID: d9ad59da50c1172fe98f94370221c9c1b688200a
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-10-09_01:03:44
Locale: en-US (en_US); Calc: CL

I see the bug too in version 6.3.
Comment 1 Xisco Faulí 2019-01-04 22:54:07 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=c3c02d012006f38519a4eeb64f306d7f3a4edbaa

author	Caolán McNamara <caolanm@redhat.com>	2018-10-13 20:27:41 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-10-14 15:02:41 +0200
commit c3c02d012006f38519a4eeb64f306d7f3a4edbaa (patch)
tree 53a3df58275df6ee5bd1943792dc985de7a4e614
parent 5487df9cf7c9d14de9b855f178b5d1194b4ae869 (diff)
weld SchAxisLabelTabPage

Bisected with: bibisect-linux64-6.2

Adding Cc: to Caolán McNamara
Comment 2 Xisco Faulí 2019-01-04 23:18:39 UTC
Patch in gerrit: https://gerrit.libreoffice.org/#/c/65879/
Comment 3 Commit Notification 2019-01-07 09:10:34 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/31e69cac6c4a3a037affb2da81a2e13aff26b411%5E%21

tdf#122494: Activate orientation by default

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2019-01-07 15:20:41 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/e3464875d4deddf51c87537299c7119c77765aa8%5E%21

tdf#122494: Activate orientation by default

It will be available in 6.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 BogdanB 2019-01-22 18:54:19 UTC
Fixed. Verified on
Version: 6.3.0.0.alpha0+
Build ID: afbbdcc216a84b59fb263777659b044c4a7cf6f0
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-01-13_03:54:12
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
Calc: threaded