tdf#122494: Activate orientation by default

Change-Id: I417c5b75206627b84c748ec5ef58c84c80e82683